--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ arch:
   - AMD64
   - ppc64le
 install:
- - go get -v -t github.com/coreos/go-oidc/...
+ - go get -v -t github.com/peterzandbergen/go-oidc/...
  - go get golang.org/x/tools/cmd/cover
  - go get golang.org/x/lint/golint
 
